--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     //Activity
     <string name="activity_user_details">User details</string>
     <string name="activity_main">GitHub Users</string>
+    <string name="activity_user_list">History</string>
 
     //Textview
     <string name="text_user_name">User name</string>
@@ -20,9 +21,12 @@
     //Buttons
     <string name="btn_search">Search</string>
     <string name="btn_retry">Retry</string>
+    <string name="btn_history">See history</string>
 
     //Exception messages
     <string name="exception_message_generic">There was an application error</string>
     <string name="exception_message_no_connection">There is no internet connection</string>
     <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
+
+    <string name="string_content_description">Non accessible view</string>
 </resources>
