--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="exception_message_generic">There was an application error</string>
     <string name="exception_message_no_connection">There is no internet connection</string>
     <string name="exception_message_user_not_found">User not found!</string>
+    <string name="exception_message_movie_not_found">Movie not found!</string>
 
     <string name="string_content_description">Non accessible view</string>
 </resources>
