--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     //Buttons
     <string name="btn_search_api">Search from API</string>
     <string name="btn_search_lod">Search from LOD</string>
+    <string name="btn_search_website">Search from Website</string>
     <string name="btn_retry">Retry</string>
     <string name="btn_history">See history</string>
 
