#feat: add details view

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -11,6 +11,28 @@
     <string name="text_user_name">User name</string>
     <string name="text_movie_title">Title</string>
     <string name="text_movie_year">Year</string>
+    <string name="text_movie_released">Released</string>
+    <string name="text_movie_website">Website</string>
+    <string name="text_movie_runtime">Runtime</string>
+    <string name="text_movie_boxoffie">Box Office</string>
+    <string name="text_movie_language">Language</string>
+    <string name="text_movie_director">Director</string>
+    <string name="text_movie_budget">Budget</string>
+    <string name="text_movie_genre">Genre</string>
+    <string name="text_movie_plot">Plot</string>
+    <string name="text_movie_awards">Awards</string>
+    <string name="text_movie_metascore">Metascore</string>
+    <string name="text_movie_imdb_ratings">IMDb Ratings</string>
+    <string name="text_movie_imdb_votes">IMDb Votes</string>
+    <string name="text_movie_production">Production</string>
+    <string name="text_movie_writters">Written by</string>
+    <string name="text_movie_actors">Starring</string>
+    <string name="text_movie_editors">Edited by</string>
+    <string name="text_movie_musicians">Music by</string>
+    <string name="text_movie_distribuion">Distributed by</string>
+    <string name="text_movie_cinematographers">Cinematography by</string>
+    <string name="text_movie_producers">Produced by</string>
+
     <string name="text_user_url">GitHub account</string>
     <string name="text_num_repos">Number of respositories</string>
     <string name="text_followers">Followers</string>
