--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     //Activity
     <string name="activity_user_details">User details</string>
-    <string name="activity_movie_details">Movie details</string>
-    <string name="activity_main">The CinemaDB</string>
+    <string name="activity_movie_details">Details</string>
+    <string name="activity_main">The FilmDB</string>
     <string name="activity_user_list">History</string>
 
     //Textview
@@ -14,6 +14,7 @@
     <string name="text_movie_released">Released</string>
     <string name="text_movie_website">Website</string>
     <string name="text_movie_runtime">Runtime</string>
+    <string name="text_movie_country">Country</string>
     <string name="text_movie_boxoffie">Box Office</string>
     <string name="text_movie_language">Language</string>
     <string name="text_movie_director">Director</string>
